--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,6 +60,10 @@
   border-radius: 50%;
   cursor: pointer;
   outline: 0px;
+  transition: all 0.3s;
+}
+.slick-podcast .slick-custom-arrow:hover {
+  background: #4D4D4D;
 }
 .slick-podcast .slick-custom-arrow.slick-custom-prev {
   left: 0;
@@ -86,6 +90,12 @@
   position: absolute;
   bottom: 1em;
   left: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #4D4D4D;
+  font-size: 0.8em;
   width: 50px;
   height: 50px;
   border: none;
@@ -99,6 +109,7 @@
   -webkit-box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   color: #58C9CD;
+  text-decoration: none;
 }
 .ox-card__body__date {
   position: absolute;
