--- a/assets/sass/_podcast.sass
+++ b/assets/sass/_podcast.sass
@@ -48,6 +48,9 @@
         border-radius: 50%
         cursor: pointer
         outline: 0px
+        transition: all .3s
+        &:hover
+            background: $body-color
         &.slick-custom-prev
             left: 0
         &.slick-custom-next
@@ -67,6 +70,12 @@
             position: absolute
             bottom: 1em
             left: 1em
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            color: $body-color
+            font-size: .8em
             width: 50px
             height: 50px
             border: none
@@ -79,6 +88,7 @@
                 -webkit-box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.25)
                 box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.25)
                 color: $primary-color
+                text-decoration: none
         &__date
             position: absolute
             top: 1em
