--- a/assets/sass/_sidebar-podcast.sass
+++ b/assets/sass/_sidebar-podcast.sass
@@ -2,6 +2,16 @@
     .uk-card
         margin-bottom: 1em
         border-radius: 5px
+        color: #4D4D4D
+        &-title
+            color: #4D4D4D !important
+        .cat-item
+            a
+                color: #4D4D4D
+                transition: all .3s
+                &:hover
+                    color: $primary-color
+                    text-decoration: none
     .uk-search
         width: 100%
     .widget-search
@@ -11,7 +21,7 @@
         color: white
         border: none
         .uk-card-title
-            color: white
+            color: white !important
         .wpcf7-text
             width: 100%
             border: none
