--- a/assets/sass/_podcast.sass
+++ b/assets/sass/_podcast.sass
@@ -202,3 +202,30 @@
                 color: $primary-color
             .ox-grid__item__link__image
                 transform: scale(1.2)
+
+//MORE PODCAST SECTION
+.ox-grid-podcast
+    &__card
+        padding: 2em
+        border: 1px solid #DEDEDE
+        margin: 1em 0
+        border-radius: 5px
+        &__title
+            color: $body-color
+            margin: 0
+            font-weight: bold
+            font-size: 2em
+        &__serie__link
+            color: $body-color-medium
+            margin: .5em 0
+            display: block
+.ox-pagination
+    padding: 1em
+    background: $bg-primary
+    nav
+        ul
+            margin: 0
+            list-style: none
+            display: flex
+            flex-flow: row wrap
+            padding: 0
