--- a/assets/sass/_general-styles.sass
+++ b/assets/sass/_general-styles.sass
@@ -13,3 +13,12 @@
             background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%)
 .ox-text-center
     text-align: center
+
+.ox-podcast-main
+    padding: 2em 0
+
+.ox-podcast-content
+    padding: 2em
+
+.text-primary
+    color: $primary-color
