--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,10 @@
   color: #58C9CD;
 }
 
+.ox-bg-primary {
+  background-color: #E9FDFF;
+}
+
 .page-template-podcast-home #tm-main {
   padding: 0;
 }
@@ -79,10 +83,10 @@
   width: 50px;
 }
 
-.slick-podcast {
+.slick-podcast, .ox-more-series {
   margin: 2em 0;
 }
-.slick-podcast .slick-custom-arrow {
+.slick-podcast .slick-custom-arrow, .ox-more-series .slick-custom-arrow {
   position: absolute;
   bottom: -5em;
   width: 50px;
@@ -95,13 +99,13 @@
   outline: 0px;
   transition: all 0.3s;
 }
-.slick-podcast .slick-custom-arrow:hover {
+.slick-podcast .slick-custom-arrow:hover, .ox-more-series .slick-custom-arrow:hover {
   background: #4D4D4D;
 }
-.slick-podcast .slick-custom-arrow.slick-custom-prev {
+.slick-podcast .slick-custom-arrow.slick-custom-prev, .ox-more-series .slick-custom-arrow.slick-custom-prev {
   left: 0;
 }
-.slick-podcast .slick-custom-arrow.slick-custom-next {
+.slick-podcast .slick-custom-arrow.slick-custom-next, .ox-more-series .slick-custom-arrow.slick-custom-next {
   left: 5em;
 }
 
@@ -282,6 +286,52 @@
   transform: scale(1.2);
 }
 
+.ox-more-series__item {
+  overflow: hidden;
+  border-radius: 10px;
+  position: relative;
+  font-size: 7pt;
+  margin: 1em;
+}
+.ox-more-series__item__link {
+  display: block;
+  height: 100%;
+}
+.ox-more-series__item__link__title {
+  position: absolute;
+  top: 30px;
+  left: 20px;
+  font-size: 5em;
+  color: white;
+  z-index: 3;
+  text-transform: uppercase;
+  transition: all 0.3s;
+}
+.ox-more-series__item__link__seasons {
+  position: absolute;
+  bottom: 2em;
+  left: 0;
+  padding: 0.2em 20px;
+  color: white;
+  background-color: #58C9CD;
+  font-size: 2em;
+  z-index: 3;
+}
+.ox-more-series__item__link__image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  z-index: 0;
+  position: relative;
+  transition: all 0.3s;
+}
+.ox-more-series__item:hover .ox-more-series__item__link__title {
+  color: #58C9CD;
+}
+.ox-more-series__item:hover .ox-more-series__item__link__image {
+  transform: scale(1.2);
+}
+
 .ox-grid-podcast__card {
   padding: 2em;
   border: 1px solid #DEDEDE;
@@ -361,15 +411,15 @@
   margin: 0;
 }
 
-.single-podcast .tm-main {
+.single-podcast .tm-main, .tax-serie_podcast .tm-main {
   background-color: white;
   padding: 0;
 }
-.single-podcast .tm-main .uk-container {
+.single-podcast .tm-main .uk-container, .tax-serie_podcast .tm-main .uk-container {
   max-width: 100%;
   padding: 0;
 }
-.single-podcast .breadcrumbs-podcast {
+.single-podcast .breadcrumbs-podcast, .tax-serie_podcast .breadcrumbs-podcast {
   margin: 2em 0;
 }
 
@@ -389,6 +439,7 @@
   color: white;
   font-size: 4em;
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 .ox-info-bar {
@@ -434,6 +485,56 @@
 
 .ox-releated-podcast {
   padding: 1em 2em;
+}
+
+.accordionjs {
+  border: none !important;
+  margin: 2em 0 !important;
+}
+.accordionjs .acc_section {
+  border: none !important;
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.23);
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.23);
+  margin-bottom: 0.5em;
+  padding: 1em;
+  color: #4D4D4D;
+}
+.accordionjs .acc_section .acc_head {
+  font-size: 3em;
+  border: none !important;
+  display: flex !important;
+  flex-flow: row wrap !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+}
+.accordionjs .acc_section .acc_head i {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: white !important;
+  background-color: #4D4D4D;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.3em;
+  transition: all 0.3s;
+  transform: rotate(0deg);
+}
+.accordionjs .acc_section.acc_active {
+  border: none !important;
+}
+.accordionjs .acc_section.acc_active .acc_head {
+  background: none !important;
+  color: #58C9CD;
+}
+.accordionjs .acc_section.acc_active .acc_head i {
+  background-color: #58C9CD;
+  transform: rotate(180deg);
+}
+
+.accordion-season .ox-grid-podcast__card__title {
+  margin-bottom: 1em;
 }
 
 /*# sourceMappingURL=main.css.map */
