--- a/assets/sass/_single-podcast.sass
+++ b/assets/sass/_single-podcast.sass
@@ -1,4 +1,4 @@
-.single-podcast
+.single-podcast, .tax-serie_podcast
     .tm-main
         background-color: white
         padding: 0
@@ -22,6 +22,7 @@
         color: white
         font-size: 4em
         font-weight: bold
+        text-transform: uppercase
 .ox-info-bar
     display: flex
     flex-flow: row wrap
