--- a/assets/sass/_podcast.sass
+++ b/assets/sass/_podcast.sass
@@ -244,6 +244,20 @@
                 color: $primary-color
             .ox-more-series__item__link__image
                 transform: scale(1.2)
+    &.ox-all-series
+        .ox-more-series__item
+            height: 450px
+            font-size: 10pt
+            &__link
+                &__image
+                    height: 100%
+// ALL SERIES SPAGE
+.page-template-all_series
+    .ox-podcast-main
+        padding-top: 0
+
+.ox-all-series-section
+    padding-top: 0
 
 //MORE PODCAST SECTION
 .ox-grid-podcast
