--- a/assets/sass/_single-podcast.sass
+++ b/assets/sass/_single-podcast.sass
@@ -1,4 +1,4 @@
-.single-podcast, .tax-serie_podcast
+.single-podcast, .tax-serie_podcast, .page-template-all_series
     .tm-main
         background-color: white
         padding: 0
